--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="js-bx-panel"></div>
     <header class="header " style="background-color: white;">
         <div class="header__line"></div>
-        <div class="container">
+        <div class="container main-container">
 
             <div class="header__inner">
                 <div class="header__logo">
